--- a/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
+++ b/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
@@ -62,8 +62,11 @@
               <option value="platinum">Platinum</option>
               <option value="gold">Gold</option>
               <option value="silver">Silver</option>
+              <option value="variable">Variable</option>
             </select>
           </div>
+     
+          
     
     </div>
         <div class="row">
