un poco de diseno

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -28,4 +28,8 @@
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
   }
+
+  .wrapper{
+    background-color: #f5f5f5;
+  }
   
