--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="wrapper">
+<div class="wrapper mt-5">
     <div *ngIf="!loading" class="body">
-        <img class="logo" src="../../../assets/login.png" alt="login">
-        <h1>Login</h1>
+        <img class="logo" src="../../../assets/adrian-1.png" alt="login">
+  <!--       <h1>Login</h1> -->
         <form (ngSubmit)="login()" [formGroup]="loginUsuario">
         <div class="form-floating mb-3">
             <input type="email" class="form-control" formControlName="email" placeholder="name@example.com">
