--- a/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
+++ b/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
@@ -1,11 +1,12 @@
-<div class="container mt-5">
+<div class="container mt-3"><div class="card">
+    <div class="card-body">
 
     <form [formGroup]="form" (ngSubmit)="submitForm()">
 
         <div class="row form-group ">
             <figure class="text-center">
                 <div class="mt-3">
-                    <h1 class="display-6 text-primary">Crear Proyecto</h1>
+                    <h1 class="display-6 text-primary card-title">Crear Proyecto</h1>
                 </div>
             </figure>
             <div class="pt-4 col input-group mb-3">
@@ -204,4 +205,5 @@
         </div>
 
     </form>
+</div></div>
 </div>
