--- a/src/app/components/recuperar-password/recuperar-password.component.html
+++ b/src/app/components/recuperar-password/recuperar-password.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper mt-5">
     <div *ngIf="!loading" class="body">
         <img class="logo" src="../../../assets/login.png" alt="login">
         <h1>Recuperar</h1>
