--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -3,10 +3,10 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    background-color: #f5f5f5;
+ /*    background-color: #f5f5f5; */
 }
 .logo{
-    height: 130px;
+    height: 230px;
     margin-bottom: 10px ;
 }
 .body{
