--- a/src/app/components/materiales/list-materiales/list-materiales.component.html
+++ b/src/app/components/materiales/list-materiales/list-materiales.component.html
@@ -1,4 +1,4 @@
-<div class="container ">
+<div class="container mt-3">
   <div class="card pt-5">
     <div class="card-body">
       <figure class="text-center">
