--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
         <a routerLink="/create-proyectos" class="list-group-item list-group-item-action py-2 ripple">
           <i class="fas fa-chart-line fa-fw me-3"></i><span>Crear Proyecto</span>
         </a>
+        <a routerLink="/list-proyectos" class="list-group-item list-group-item-action py-2 ripple">
+          <i class="fas fa-list fa-fw me-3"></i><span>List Proyecto</span>
+        </a>
         <a routerLink="/list-materiales" class="list-group-item list-group-item-action py-2 ripple">
           <i class="fas fa-warehouse fa-fw me-3"></i><span>Materiales</span>
         </a>
