--- a/src/app/components/materiales/list-materiales/list-materiales.component.html
+++ b/src/app/components/materiales/list-materiales/list-materiales.component.html
@@ -2,7 +2,7 @@
   <div class="card pt-5">
     <div class="card-body">
       <figure class="text-center">
-        <div class="mt-3"> <h1 class="display-6 text-primary">Lista de Materiales</h1></div></figure>
+        <div class="mt-3"> <h1 class="display-6 text-primary card-title">Lista de Materiales</h1></div></figure>
       <button
         class="btn btn-primary btn-lg float-end"
         routerLink="/create-materiales"
