--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,35 +1,30 @@
-/* Sidebar */
-.sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    padding: 58px 0 0; /* Height of navbar */
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
-    width: 240px;
-    z-index: 600;
-  }
-  
-  @media (max-width: 991.98px) {
-    .sidebar {
-      width: 100%;
-    }
-  }
-  .sidebar .active {
-    border-radius: 5px;
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-  }
-  
-  .sidebar-sticky {
-    position: relative;
-    top: 0;
-    height: calc(100vh - 48px);
-    padding-top: 0.5rem;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-  }
+:root {
+  --primary-color: #89cff0;
+}
 
-  .wrapper{
-    background-color: #f5f5f5;
-  }
-  
+/* Colores más oscuros */
+.bg-primary-dark {
+  background-color: hsl(200, 80%, 70%);
+}
+
+.text-primary-dark {
+  color: hsl(200, 80%, 70%);
+}
+
+/* Colores medios */
+.bg-primary-medium {
+  background-color: hsl(200, 80%, 85%);
+}
+
+.text-primary-medium {
+  color: hsl(200, 80%, 85%);
+}
+
+/* Colores más claros */
+.bg-primary-light {
+  background-color: hsl(200, 80%, 95%);
+}
+
+.text-primary-light {
+  color: hsl(200, 80%, 95%);
+}
