--- a/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
+++ b/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
@@ -199,10 +199,11 @@
 
             </div>
         </div>
-        <div class="mt-3 d-grid gap-2 d-md-block" >
-
-            <button type="submit" class="btn btn-outline-success btn-lg me-md-2" *ngIf="selectedMaterials.length > 0 || selectedTrabajadores.length > 0">Agregar</button>
-            <button type="button" class="btn btn-outline-danger btn-lg ml-2" (click)="limpiarForm()">Limpiar</button>
+        <div class="mt-3 d-grid gap-2 d-md-block btn-group" >
+            <a routerLink="/list-proyectos" class="btn btn-outline-primary btn-lg me-md-2">Volver a la lista</a>
+            <button type="submit" class="btn btn-outline-success btn-lg me-md-2" *ngIf="selectedMaterials.length > 0 && selectedTrabajadores.length > 0">Agregar</button>
+            <button type="button" class="btn btn-outline-danger btn-lg  me-md-2" (click)="limpiarForm()">Limpiar</button>     
+           
         </div>
 
     </form>
