--- a/src/app/components/trabajadores/create-trabajadores/create-trabajadores.component.html
+++ b/src/app/components/trabajadores/create-trabajadores/create-trabajadores.component.html
@@ -52,17 +52,18 @@
                   />
                 </div>
                
-              </div>
-  
-              <div class="mt-3">
+              </div>  
+              
+
+              <div class="mt-3 d-grid gap-2 d-md-block">
                 <button
                   type="text"
-                  class="btn btn-primary btn-lg mr-3"
+                  class="btn btn-outline-primary btn-lg me-md-2"
                   routerLink="/list-trabajadores"
                 >
                   Volver
                 </button>
-                <button type="submit" class="btn btn-success btn-lg">
+                <button type="submit" class="btn btn-outline-success btn-lg">
                   Agregar
                 </button>
               </div>
