--- a/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
+++ b/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
@@ -52,6 +52,8 @@
                 <option value="Underground"> Underground</option>
                 <option value="Tubset"> Tubset</option>
                 <option value="Trim"> Trim</option>
+                <option value="Terminado"> Terminado</option>
+                <option value="Pte-Cobro"> Pte. Cobro</option>
             </select>
         </div>
         <div class="pt-4 col right-section input-group mb-3" *ngIf="clientSelect.value">
