--- a/src/app/components/proyectos/list-proyectos/list-proyectos.component.html
+++ b/src/app/components/proyectos/list-proyectos/list-proyectos.component.html
@@ -35,6 +35,8 @@
       
           <td>
             <i (click)="eliminarProyecto(fila.proyectos.clientSelect, fila.proyectos.id)" class="fas fa-trash-alt fa-lg text-danger mx-2"></i>
+            <i class="fas fa-edit fa-lg text-info me-2" [routerLink]="['/edit-proyecto/', fila.proyectos.id]"
+                ></i>
             <i (click)="mostrarDetalles(fila)" class="fas fa-plus-circle mx-2"></i>
         </td>
         
